# pce-python-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/llm-assistant/: pyproject.toml
agents/rover/: README.md  __init__.py  app.py  pyproject.toml
agents/rover/logging/: __init__.py  logger.py  ring_buffer.py
agents/rover/pce_bridge/: __init__.py  bridge.py  contracts.py
agents/rover/src/rover_plugins/: __init__.py  adaptation.py  decision.py  storage.py
agents/rover/tests/: test_bridge.py  test_bridge_contracts.py  test_robotics_rl.py  test_sensors.py  test_world.py
agents/rover/web/: app.js  index.html  styles.css
agents/rover/world/: __init__.py  maps.py  rewards.py  sensors.py  world.py
agents/trader/: END_TO_END.md  README.md  cli.py  manifest.md  pyproject.toml  ui_server.py
agents/trader/data/: sample_candles.csv  sample_features.csv
agents/trader/src/trader_plugins/: __init__.py  adaptation.py  ao.py  config.py  dataset.py  decision.py  epl.py  events.py  expression.py  isi.py  ledger.py  registry.py  runtime.py  storage.py  types.py  value_model.py  value_policy.py
agents/trader/tests/: test_trader_core.py  test_trader_ui.py
agents/trader/ui/: app.js  index.html  styles.css
api/: main.py
apps/ui-assistant/: package-lock.json  package.json  tsconfig.node.json
apps/ui-os/: README.md  index.html  package-lock.json  package.json  vite.config.ts
config/: .env.example  openrouter_credentials.json
docs/: DOCUMENTACAO_PRINCIPAL.md  security-compliance.md
docs/adrs/: 0001-monorepo.md  0002-sqlite-state.md  0003-cci-derivation-real.md  0004-adaptive-values-tuning.md  0005-persistence-strategy.md
docs/architecture/: glossary.md  overview.md
docs/contracts/: action.schema.json  events.example.financial.json
docs/performance/: benchmarks.md
docs/tutorials/: tutorial.md
pce-core/: README.md  pyproject.toml
pce-core/docs/contracts/: events.example.robot.json  events.schema.json
pce-core/src/pce/core/: config.py  types.py
pce-core/src/pce/examples/: scenarios.py
pce-core/src/pce/sm/: __init__.py
pce-core/src/pce/vel/: __init__.py  evaluator.py
pce-core/src/pce_api/: __init__.py  main.py
pce-core/tests/: test_cci.py  test_epl.py  test_layers.py  test_settings_paths.py  test_sm.py
pce-os/: pyproject.toml
pce-os/config/: os_config.json
pce-os/docs/: README.md
pce-os/docs/contracts/: action.os.schema.json  events.os.schema.json
pce-os/src/pce_os/: __init__.py  config.py  models.py  plugins.py  policy.py  transcript.py  twin_store.py
pce-os/src/pce_os/agents/: __init__.py  base.py  bus.py  engineering.py  finance.py  llm.py  procurement.py  tests.py
pce-os/src/pce_os/agents/manifests/: engineering.md  finance.md  procurement.md  tests.md
pce-os/tests/: test_agents_smoke.py  test_approval_gate.py  test_bus_limits.py  test_config_loader.py  test_orchestrator_flow.py  test_os_api_flow.py  test_os_control_room_api.py  test_os_schema.py  test_twin_store.py
policies/: CODING_STANDARDS.md  DEFINITIONS_OF_DONE.md  NO_BINARIES.md  SECURITY.md
src/pce/: __init__.py
tests/: test_assistant_decision.py  test_cci_real.py  test_epl.py  test_integration.py  test_llm_assistant_plugin.py  test_openrouter_client.py  test_openrouter_config.py  test_plugins_registry.py  test_robotics_rl.py  test_sm.py
worker/: loop.py
(+76 files in other folders)
