[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pce-os"
version = "0.1.0"
description = "PCE-OS robotics domain layer"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pce-python-core",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
