[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pce-agent-rover"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pce-python-core",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["rover_plugins*", "agents.rover*"]
